--- a/desc1.html
+++ b/desc1.html
@@ -17,7 +17,7 @@
 	</div>
     <div class="container">
         <div class="sidebar">
-            <a href="desc1.html"><img src="img/img1.png" alt="Item 1"></a>
+            <a href="desc1.html"><img src="img/img1_1.png" alt="Item 1"></a>
             <a href="desc2.html"><img src="img/img2.png" alt="Item 2"></a>
             <a href="desc3.html"><img src="img/img3.png" alt="Item 3"></a>
         </div>
