--- a/desc3.html
+++ b/desc3.html
@@ -19,12 +19,12 @@
         <div class="sidebar">
             <a href="desc1.html"><img src="img/img1.png" alt="Item 1"></a>
             <a href="desc2.html"><img src="img/img2.png" alt="Item 2"></a>
-            <a href="desc3.html"><img src="img/img3.png" alt="Item 3"></a>
+            <a href="desc3.html"><img src="img/img3_1.png" alt="Item 3"></a>
         </div>
 		        <!-- 가운데 설명 -->
         <div class="content">
-            <h1>첫 번째 이미지</h1>
-            <p>이것은 첫 번째 이미지에 대한 설명입니다.</p>
+            <h1>세 번째 이미지</h1>
+            <p>이것은 세 번째 이미지에 대한 설명입니다.</p>
         </div>
 		
 		<div class="icon-bar">
