--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<title>이미지 리스트</title>
 	
     <link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/iconbar.css" />
     <link rel="stylesheet" href="css/sidebar.css" />
     <link rel="stylesheet" href="css/content.css" />
     <link rel="stylesheet" href="css/color-scheme.css" />
 	<link rel="stylesheet" href="css/dropdown.css" />
 	<link rel="stylesheet" href="css/header.css" />
-	<script src="https://cdn.tailwindcss.com"></script>
 	<script src="js/dropdown.js"></script>
 
 	
@@ -20,19 +20,21 @@
 	<header id="header" class="layout1" data-ez-layout="layout1">
 		<div class="inner">
 			<div class="toparea">
-				<div class="dropdown inline-block relative">
-					<button class="bg-orange-500 text-white font-semibold py-2 px-4 rounded-md inline-flex items-center hover:bg-orange-600 transition-colors">
-						<a class="mr-1" href="#">메뉴</a> 
-						<svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
-					</button>
-					<div class="dropdown-content absolute hidden text-gray-700 pt-1 rounded-md shadow-lg">
-						<a class="rounded-t-md bg-gray-50 hover:bg-gray-200 py-2 px-4 block whitespace-no-wrap" href="#">공지 사항</a>
-						<a class="bg-gray-50 hover:bg-gray-200 py-2 px-4 block whitespace-no-wrap" href="#">회원가입</a>
-						<a class="bg-gray-50 hover:bg-gray-200 py-2 px-4 block whitespace-no-wrap" href="#">로그인</a>
-						<a class="bg-gray-50 hover:bg-gray-200 py-2 px-4 block whitespace-no-wrap" href="#">주문조회</a>
-						<a class="rounded-b-md bg-gray-50 hover:bg-gray-200 py-2 px-4 block whitespace-no-wrap" href="#">고객센터</a>
-					</div>
+			  <div class="dropdown">
+				<button class="dropbtn">
+				  <span style="margin-right: 4px;">메뉴</span>
+				  <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="16" width="16" viewBox="0 0 20 20">
+					<path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/>
+				  </svg>
+				</button>
+				<div class="dropdown-content">
+				  <a href="#">공지 사항</a>
+				  <a href="#">회원가입</a>
+				  <a href="#">로그인</a>
+				  <a href="#">주문조회</a>
+				  <a href="#">고객센터</a>
 				</div>
+			  </div>
 			</div>
 
 			<div class="logo_container">
@@ -59,7 +61,7 @@
 		</div>
     </div>
 	<footer>
-		<h3>Jeon Yeong Jun</h6>
+		<h3>Jeon Yeong Jun</h3>
 	</footer>
 	
 </body>
