--- a/product_detail_1.html
+++ b/product_detail_1.html
@@ -50,62 +50,10 @@
 
     <!-- 가운데 설명 및 상품 목록 -->
     <div class="content">
-      <h1>YJ shop</h1>
-      <p>YJ shop info</p>
-
-      <!-- 상품 목록 시작 -->
-      <div class="product-list">
-        <div class="product-item">
-          <a href="product_detail_1.html"> <!-- 상품 1 상세 페이지 링크 -->
-            <div class="product-image-box">
-              <img src="img/product_sample_1.png" alt="상품 1 이름">
-            </div>
-            <div class="product-caption">상품 1</div>
-          </a>
-        </div>
-        <div class="product-item">
-          <a href="product_detail_2.html"> <!-- 상품 2 상세 페이지 링크 -->
-            <div class="product-image-box">
-              <img src="img/product_sample_2.png" alt="상품 2 이름">
-            </div>
-            <div class="product-caption">상품 2</div>
-          </a>
-        </div>
-        <div class="product-item">
-          <a href="product_detail_3.html"> <!-- 상품 3 상세 페이지 링크 -->
-            <div class="product-image-box">
-              <img src="img/product_sample_3.png" alt="상품 3 이름">
-            </div>
-            <div class="product-caption">상품 3</div>
-          </a>
-        </div>
-        <div class="product-item">
-          <a href="product_detail_4.html"> <!-- 상품 4 상세 페이지 링크 -->
-            <div class="product-image-box">
-              <img src="img/product_sample_4.png" alt="상품 4 이름">
-            </div>
-            <div class="product-caption">상품 4</div>
-          </a>
-        </div>
-        <div class="product-item">
-          <a href="product_detail_5.html"> <!-- 상품 5 상세 페이지 링크 -->
-            <div class="product-image-box">
-              <img src="img/product_sample_5.png" alt="상품 5 이름">
-            </div>
-            <div class="product-caption">상품 5</div>
-          </a>
-        </div>
-        <div class="product-item">
-          <a href="product_detail_6.html"> <!-- 상품 6 상세 페이지 링크 -->
-            <div class="product-image-box">
-              <img src="img/product_sample_6.png" alt="상품 6 이름">
-            </div>
-            <div class="product-caption">상품 6</div>
-          </a>
-        </div>
-        <!-- 필요한 만큼 상품 아이템을 추가하세요. 각 href와 img src, alt를 수정하세요. -->
-      </div>
-      <!-- 상품 목록 끝 -->
+      <a href="product_detail_1.html"><img src="img/product_sample_1.png" alt="상품 1"></a>
+      <h1>상품 1</h1>
+      <p>상품 1 정보</p>
+	  <img src="#" alt="상품 1 정보 이미지">
 
     </div>
 
