--- a/notice.html
+++ b/notice.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>YS SHOP</title>
+  <title>YJ SHOP</title>
   
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/style.css" />
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/color-scheme.css" />
   <link rel="stylesheet" href="css/dropdown.css" />
   <link rel="stylesheet" href="css/header.css" />
+  <link rel="stylesheet" href="css/notice.css">
   <script src="js/dropdown.js"></script>
 </head>
 <body>
@@ -50,62 +51,59 @@
 
     <!-- 가운데 설명 및 상품 목록 -->
     <div class="content">
-      <h1>YJ shop</h1>
-      <p>YJ shop info</p>
+    <div id="content">
+        <!-- ===== 공지사항 내용 시작 ===== -->
+        <section class="notice-section">
+            <h2>공지사항</h2>
 
-      <!-- 상품 목록 시작 -->
-      <div class="product-list">
-        <div class="product-item">
-          <a href="product_detail_1.html"> <!-- 상품 1 상세 페이지 링크 -->
-            <div class="product-image-box">
-              <img src="img/product_sample_1.png" alt="상품 1 이름">
+            <table class="notice-table">
+                <thead>
+                    <tr>
+                        <th class="col-num">번호</th>
+                        <th class="col-title">제목</th>
+                        <th class="col-author">작성자</th>
+                        <th class="col-date">작성일</th>
+                        <th class="col-views">조회수</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="col-num">3</td>
+                        <td class="col-title"><a href="#">[안내] 시스템 정기 점검 안내 (06/04)</a></td>
+                        <td class="col-author">관리자</td>
+                        <td class="col-date">2025-06-03</td>
+                        <td class="col-views">123</td>
+                    </tr>
+                    <tr>
+                        <td class="col-num">2</td>
+                        <td class="col-title"><a href="#">[이벤트] 여름맞이 특별 할인 이벤트!</a></td>
+                        <td class="col-author">운영팀</td>
+                        <td class="col-date">2025-06-01</td>
+                        <td class="col-views">456</td>
+                    </tr>
+                    <tr>
+                        <td class="col-num">1</td>
+                        <td class="col-title"><a href="#">저희 웹사이트에 오신 것을 환영합니다.</a></td>
+                        <td class="col-author">관리자</td>
+                        <td class="col-date">2025-05-29</td>
+                        <td class="col-views">789</td>
+                    </tr>
+                    <!-- 여기에 더 많은 공지사항 항목을 추가할 수 있습니다. -->
+                </tbody>
+            </table>
+
+            <div class="notice-actions">
+                <ul class="pagination">
+                    <li class="active"><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">&raquo;</a></li>
+                </ul>
+                <a href="#" class="write-button">글쓰기</a>
             </div>
-            <div class="product-caption">상품 1</div>
-          </a>
-        </div>
-        <div class="product-item">
-          <a href="product_detail_2.html"> <!-- 상품 2 상세 페이지 링크 -->
-            <div class="product-image-box">
-              <img src="img/product_sample_2.png" alt="상품 2 이름">
-            </div>
-            <div class="product-caption">상품 2</div>
-          </a>
-        </div>
-        <div class="product-item">
-          <a href="product_detail_3.html"> <!-- 상품 3 상세 페이지 링크 -->
-            <div class="product-image-box">
-              <img src="img/product_sample_3.png" alt="상품 3 이름">
-            </div>
-            <div class="product-caption">상품 3</div>
-          </a>
-        </div>
-        <div class="product-item">
-          <a href="product_detail_4.html"> <!-- 상품 4 상세 페이지 링크 -->
-            <div class="product-image-box">
-              <img src="img/product_sample_4.png" alt="상품 4 이름">
-            </div>
-            <div class="product-caption">상품 4</div>
-          </a>
-        </div>
-        <div class="product-item">
-          <a href="product_detail_5.html"> <!-- 상품 5 상세 페이지 링크 -->
-            <div class="product-image-box">
-              <img src="img/product_sample_5.png" alt="상품 5 이름">
-            </div>
-            <div class="product-caption">상품 5</div>
-          </a>
-        </div>
-        <div class="product-item">
-          <a href="product_detail_6.html"> <!-- 상품 6 상세 페이지 링크 -->
-            <div class="product-image-box">
-              <img src="img/product_sample_6.png" alt="상품 6 이름">
-            </div>
-            <div class="product-caption">상품 6</div>
-          </a>
-        </div>
-        <!-- 필요한 만큼 상품 아이템을 추가하세요. 각 href와 img src, alt를 수정하세요. -->
-      </div>
-      <!-- 상품 목록 끝 -->
+        </section>
+        <!-- ===== 공지사항 내용 끝 ===== -->
+    </div>
 
     </div>
 
