--- a/support.html
+++ b/support.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>YS SHOP</title>
+  <title>YJ SHOP</title>
   
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/style.css" />
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/color-scheme.css" />
   <link rel="stylesheet" href="css/dropdown.css" />
   <link rel="stylesheet" href="css/header.css" />
+  <link rel="stylesheet" href="css/notice.css">
   <script src="js/dropdown.js"></script>
 </head>
 <body>
@@ -29,7 +30,7 @@
             <a href="notice.html">공지 사항</a>
             <a href="signup.html">회원가입</a>
             <a href="signin.html">로그인</a>
-            <a href="orders.html">주문조회</a>
+            <a href="order_list.html">주문조회</a>
             <a href="support.html">고객센터</a>
           </div>
         </div>
@@ -50,10 +51,9 @@
 
     <!-- 가운데 설명 및 상품 목록 -->
     <div class="content">
-      <a href="product_detail_1.html"><img src="img/product_sample_1.png" alt="상품 1"></a>
-      <h1>상품 1</h1>
-      <p>상품 1 정보</p>
-	  <img src="#" alt="상품 1 정보 이미지">
+		<div id="content">
+			
+		</div>
 
     </div>
 
