--- a/product_detail_3.html
+++ b/product_detail_3.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>이미지 리스트</title>
+  <title>YS SHOP</title>
   
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/style.css" />
@@ -26,11 +26,11 @@
             </svg>
           </button>
           <div class="dropdown-content">
-            <a href="#">공지 사항</a>
-            <a href="#">회원가입</a>
-            <a href="#">로그인</a>
-            <a href="#">주문조회</a>
-            <a href="#">고객센터</a>
+            <a href="notice.html">공지 사항</a>
+            <a href="signup.html">회원가입</a>
+            <a href="signin.html">로그인</a>
+            <a href="orders.html">주문조회</a>
+            <a href="support.html">고객센터</a>
           </div>
         </div>
       </div>
