--- a/notice.html
+++ b/notice.html
@@ -69,21 +69,21 @@
                 <tbody>
                     <tr>
                         <td class="col-num">3</td>
-                        <td class="col-title"><a href="#">[안내] 시스템 정기 점검 안내 (06/04)</a></td>
+                        <td class="col-title"><a href="notice_post_example.html">[안내] 시스템 정기 점검 안내 (06/04)</a></td>
                         <td class="col-author">관리자</td>
                         <td class="col-date">2025-06-03</td>
                         <td class="col-views">123</td>
                     </tr>
                     <tr>
                         <td class="col-num">2</td>
-                        <td class="col-title"><a href="#">[이벤트] 여름맞이 특별 할인 이벤트!</a></td>
+                        <td class="col-title"><a href="notice_post_example.html">[이벤트] 여름맞이 특별 할인 이벤트!</a></td>
                         <td class="col-author">운영팀</td>
                         <td class="col-date">2025-06-01</td>
                         <td class="col-views">456</td>
                     </tr>
                     <tr>
                         <td class="col-num">1</td>
-                        <td class="col-title"><a href="#">저희 웹사이트에 오신 것을 환영합니다.</a></td>
+                        <td class="col-title"><a href="notice_post_example.html">저희 웹사이트에 오신 것을 환영합니다.</a></td>
                         <td class="col-author">관리자</td>
                         <td class="col-date">2025-05-29</td>
                         <td class="col-views">789</td>
