--- a/notice.html
+++ b/notice.html
@@ -99,7 +99,7 @@
                     <li><a href="#">3</a></li>
                     <li><a href="#">&raquo;</a></li>
                 </ul>
-                <a href="#" class="write-button">글쓰기</a>
+                <a href="notice_write.html" class="write-button" style="text-decoration: none; padding: 8px 15px; background-color: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer;">글쓰기</a>
             </div>
         </section>
         <!-- ===== 공지사항 내용 끝 ===== -->
