--- a/product_detail_1.html
+++ b/product_detail_1.html
@@ -128,7 +128,7 @@
                 <img src="img/product_detail_sample_1.jpg" alt="상품 1 상세 정보 이미지 1">
                 <p>계속해서 상품의 특징, 장점, 사용 방법 등을 설명합니다. 고품질의 소재와 뛰어난 디자인을 자랑합니다.</p>
                 <img src="img/product_detail_sample_2.jpg" alt="상품 1 상세 정보 이미지 2">
-                <!-- 추가 상세 정보 내용 -->
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/8KrLtLr-Gy8?si=nSYeylVSRburm4Zu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             
             <div class="product-reviews-section">
