--- a/notice.html
+++ b/notice.html
@@ -30,7 +30,7 @@
             <a href="notice.html">공지 사항</a>
             <a href="signup.html">회원가입</a>
             <a href="signin.html">로그인</a>
-            <a href="ordes.html">주문조회</a>
+            <a href="orders.html">주문조회</a>
             <a href="support.html">고객센터</a>
           </div>
         </div>
