--- a/notice.html
+++ b/notice.html
@@ -110,7 +110,7 @@
     <div class="icon-bar">
       <a href="https://github.com/enedoca" target="_blank"><img src="img/icon1.png" alt="깃허브 아이콘" /></a>
       <a href="https://solved.ac/profile/juni1311" target="_blank"><img src="img/icon2.png" alt="solved.ac 아이콘" /></a>
-      <a href="https://www.kunsan.ac.kr" target="_blank"><img src="img/icon3.png" alt="군산대학교 아이콘" /></a>
+      <a href="#" target="_blank"><img src="img/icon_3.png" alt="icon_3" /></a>
     </div>
   </div>
 
